Bug 1339758, click() and similar can return 0 from various coordinate properties, r=masayuki