dom/events/MouseEvent.cpp
@@ -364,6 +364,10 @@ MouseEvent::GetScreenX(int32_t* aScreenX)
 int32_t
 MouseEvent::ScreenX(CallerType aCallerType)
 {
+  if (mEvent->mFlags.mIsPositionless) {
+    return 0;
+  }
+
   if (nsContentUtils::ResistFingerprinting(aCallerType)) {
     // Sanitize to something sort of like client cooords, but not quite
     // (defaulting to (0,0) instead of our pre-specified client coords).
@@ -385,6 +389,10 @@ MouseEvent::GetScreenY(int32_t* aScreenY)
 int32_t
 MouseEvent::ScreenY(CallerType aCallerType)
 {
+  if (mEvent->mFlags.mIsPositionless) {
+    return 0;
+  }
+
   if (nsContentUtils::ResistFingerprinting(aCallerType)) {
     // Sanitize to something sort of like client cooords, but not quite
     // (defaulting to (0,0) instead of our pre-specified client coords).
@@ -407,6 +415,10 @@ MouseEvent::GetClientX(int32_t* aClientX)
 int32_t
 MouseEvent::ClientX()
 {
+  if (mEvent->mFlags.mIsPositionless) {
+    return 0;
+  }
+
   return Event::GetClientCoords(mPresContext, mEvent, mEvent->mRefPoint,
                                 mClientPoint).x;
 }
@@ -422,6 +434,10 @@ MouseEvent::GetClientY(int32_t* aClientY)
 int32_t
 MouseEvent::ClientY()
 {
+  if (mEvent->mFlags.mIsPositionless) {
+    return 0;
+  }
+
   return Event::GetClientCoords(mPresContext, mEvent, mEvent->mRefPoint,
                                 mClientPoint).y;
 }
@@ -429,6 +445,9 @@ MouseEvent::ClientY()
 int32_t
 MouseEvent::OffsetX()
 {
+  if (mEvent->mFlags.mIsPositionless) {
+    return 0;
+  }
   return Event::GetOffsetCoords(mPresContext, mEvent, mEvent->mRefPoint,
                                 mClientPoint).x;
 }
@@ -436,6 +455,9 @@ MouseEvent::OffsetX()
 int32_t
 MouseEvent::OffsetY()
 {
+  if (mEvent->mFlags.mIsPositionless) {
+    return 0;
+  }
   return Event::GetOffsetCoords(mPresContext, mEvent, mEvent->mRefPoint,
                                 mClientPoint).y;
 }
